# stroids-clone

./: .gitignore  Cargo.toml  README.md  config.ron
src/: game.rs  main.rs  utils.rs
src/components/: laser.rs  mod.rs  roid.rs  ship.rs
